Opened 15 years ago

Closed 15 years ago

Last modified 13 years ago

#30 closed defect (fixed)

av_metadata_get does not get embeded meta data

Reported by: chinshou Owned by: baptiste
Priority: normal Component: avformat
Version: Keywords: mov metadata
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

ffmepg binary was downloaded from http://ffmpeg.arrozcru.org/autobuilds/ffmpeg/mingw32/static/ffmpeg-r26400-swscale-r32676-mingw32-static.7z

executed ffmpeg -i 1.flv -f mp4 -metadata lyrics="abc" 1.mp4 to embed lyrics meta data to mp4 container format video file

from http://wiki.multimedia.cx/index.php?title=FFmpeg_Metadata, it seems lyrics metadata was supported by mp4 container.

but after conversion ,
execute ffmpeg -i 1.mp4 lyrics metadata was not displayed .

use a hex editor to edit the mp4 file , I can find "abc" text was appended at the end of mp4 file.

But it seems av_metadata_get did not read the lyrics metadata correctly. some other metadata seems ok for example title meta tag.

ffmpeg -i 1.flv -f mp4 -metadata title="abc" 1.mp4

Change History (3)

comment:1 by Michael Niedermayer, 15 years ago

Component: FFmpegavformat
Keywords: mp4 muxer metadata added
Owner: changed from Michael Niedermayer to baptiste
Reproduced by developer: set
Status: newopen

The mp4 muxer does not store the metadata, it seems.

comment:2 by reimar, 15 years ago

Resolution: fixed
Status: openclosed

A handful of tags, among them lyrics, were written by the muxer but not read by the demuxer.
This is fixed 543f3db.

comment:3 by Carl Eugen Hoyos, 13 years ago

Keywords: mov added; mp4 muxer removed
Note: See TracTickets for help on using tickets.