Read the album_artist, grouping and lyrics metadata.

Our muxer writes these out, so we really should support reading them.
Fixes ticket #30.